--- a/app/styles/index.scss
+++ b/app/styles/index.scss
@@ -73,7 +73,8 @@ body.show-instructions {
   background-size: 520px 476px;
 
   .power-mode & {
-    background-image: url(~assets/images/logo-power.png);
+    opacity: 0.8;
+    background-image: url(~assets/images/logo-power.gif);
     animation: background-power 2s infinite both;
   }
 }
@@ -309,7 +310,7 @@ body.power-mode #editor {
 body.power-mode {
   .power-mode-indicator {
     opacity: 1;
-    animation: power-mode-indicator 750ms linear both;
+    animation: power-mode-indicator 1750ms linear both;
   }
 
   .name-tag {
@@ -340,7 +341,7 @@ body.power-mode {
         animation-timing-function: ease-out;
     }
     50% {
-        opacity: 0.5;
+        opacity: 0.8;
         animation-timing-function: ease-in;
     }
 }
@@ -350,7 +351,7 @@ body.power-mode {
        animation-timing-function: ease-out;
     }
     50% {
-        transform: scale(1.3);
+        transform: scale(1.1);
         animation-timing-function: ease-in;
     }
 }
@@ -367,7 +368,7 @@ body.power-mode {
     animation-timing-function: ease-out;
   }
   50% {
-    transform: scale(1.5);
+    transform: scale(1.1);
     animation-timing-function: ease-in;
   }
 }
